feat: implement canvas REST API and enhance permissions (#14)
* chore: canvas reconciler

* chore: use struct name for api generated names

* fix: chart controller with proper permissions

* chore: added v1alpha1 api scheme to apiserver

* feat: create and list canvases rest api

* chore(fe): codegen
